--- a/index.html
+++ b/index.html
@@ -42,18 +42,30 @@
                     <h2 class="visually-hidden">Features</h2>
             <ul class="features-list">
                 <li class="features-items">
+                    <div class="features-icon">
+
+                    </div>
                     <h3 class="features-title">Strategy</h3>
                     <p class="features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="features-items">
+                    <div class="features-icon">
+
+                    </div>
                     <h3 class="features-title">Punctuality</h3>
                     <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="features-items">
+                    <div class="features-icon">
+
+                    </div>
                     <h3 class="features-title">Diligence</h3>
                     <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="features-items">
+                    <div class="features-icon">
+
+                    </div>
                     <h3 class="features-title">Technologies</h3>
                     <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -69,6 +81,20 @@
                             <div class="card-content">
                                 <h3 class="team-list-head">Mark Guerrero</h3>
                                 <p class="team-list-text">Product Designer</p>
+                                <ul class="team-social list">
+                                    <li class="team-social-item">
+                                        <div>link1</div>
+                                    </li>
+                                    <li class="team-social-item">
+                                        <div>link2</div>
+                                    </li>
+                                    <li class="team-social-item">
+                                        <div>link3</div>
+                                    </li>
+                                    <li class="team-social-item">
+                                        <div>link4</div>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-list-item">
@@ -76,6 +102,20 @@
                             <div class="card-content">
                             <h3 class="team-list-head">Tom Ford</h3>
                             <p class="team-list-text">Frontend Developer</p>
+                            <ul class="team-social list">
+                                <li class="team-social-item">
+                                    <div>link1</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link2</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link3</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link4</div>
+                                </li>
+                            </ul>
                         </div>
                         </li>
                         <li class="team-list-item">
@@ -83,6 +123,20 @@
                             <div class="card-content">
                             <h3 class="team-list-head">Camila Garcia</h3>
                             <p class="team-list-text">Marketing</p>
+                            <ul class="team-social list">
+                                <li class="team-social-item">
+                                    <div>link1</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link2</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link3</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link4</div>
+                                </li>
+                            </ul>
                         </div>
                         </li>
                         <li class="team-list-item">
@@ -90,6 +144,20 @@
                             <div class="card-content">
                             <h3 class="team-list-head">Daniel Wilson</h3>
                             <p class="team-list-text">UI Designer</p>
+                            <ul class="team-social list">
+                                <li class="team-social-item">
+                                    <div>link1</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link2</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link3</div>
+                                </li>
+                                <li class="team-social-item">
+                                    <div>link4</div>
+                                </li>
+                            </ul>
                         </div>
                         </li>
                     </ul>
@@ -101,6 +169,7 @@
                     <ul class="portfolio-list">
                         <li class="portfolio-list-item">
                             <img src="./images/portfolio1.jpg" alt="BankApp" width="360" height="300">
+                            <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <div class="portfolio-card">
                                 <h3 class="portfolio-list-head">Banking App</h3>
                                 <p class="portfolio-list-text">App</p>
