--- a/index.html
+++ b/index.html
@@ -167,44 +167,74 @@
                 <div class="container">
                     <h2 class="portfolio-title">Our Portfolio</h2>
                     <ul class="portfolio-list">
-                        <li class="portfolio-list-item">
-                            <img src="./images/portfolio1.jpg" alt="BankApp" width="360" height="300">
-                            <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            <div class="portfolio-card">
-                                <h3 class="portfolio-list-head">Banking App</h3>
-                                <p class="portfolio-list-text">App</p>
+                        <li class="portfolio-list-item">                            
+                            <div class="portfolio-wrap">
+                                <img src="./images/portfolio1.jpg" alt="BankApp" width="360" height="300">
+                                <div class="portfolio-cover-wrap">
+                                    <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
                             </div>
+                                <div class="portfolio-card">
+                                    <h3 class="portfolio-list-head">Banking App</h3>
+                                    <p class="portfolio-list-text">App</p>
+                                </div>
+                            
                         </li>
                         <li class="portfolio-list-item">
+                            <div class="portfolio-wrap">
                             <img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360" height="300">
+                        <div class="portfolio-cover-wrap">
+                                    <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>    
+                        </div>
                             <div class="portfolio-card">
                             <h3 class="portfolio-list-head">Cashless Payment</h3>
                             <p class="portfolio-list-text">Marketing</p>
                         </div>
                         </li>
                         <li class="portfolio-list-item">
+                            <div class="portfolio-wrap">
                             <img src="./images/portfolio3.jpg" alt="Meditaion App" width="360" height="300">
+                        <div class="portfolio-cover-wrap">
+                                    <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>    
+                        </div>
                             <div class="portfolio-card">
                             <h3 class="portfolio-list-head">Meditation App</h3>
                             <p class="portfolio-list-text">App</p>
                         </div>
                         </li>
                         <li class="portfolio-list-item">
+                            <div class="portfolio-wrap">
                             <img src="./images/portfolio4.jpg" alt="Taxi" width="360" height="300">
+                        <div class="portfolio-cover-wrap">
+                                    <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>    
+                        </div>
                             <div class="portfolio-card">
                             <h3 class="portfolio-list-head">Taxi Service</h3>
                             <p class="portfolio-list-text">Marketing</p>
                         </div>
                         </li>
                         <li class="portfolio-list-item">
+                            <div class="portfolio-wrap">
                             <img src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360" height="300">
+                        <div class="portfolio-cover-wrap">
+                                    <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>    
+                        </div>
                             <div class="portfolio-card">
                             <h3 class="portfolio-list-head">Screen Illustrations</h3>
                             <p class="portfolio-list-text">Design</p>
                         </div>
                         </li>
                         <li class="portfolio-list-item">
+                            <div class="portfolio-wrap">
                             <img src="./images/portfolio6.jpg" alt="Online Courses" width="360" height="300">
+                        <div class="portfolio-cover-wrap">
+                                    <p class="portfolio-cover">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>    
+                        </div>
                             <div class="portfolio-card">
                             <h3 class="portfolio-list-head">Online Courses</h3>
                             <p class="portfolio-list-text">Marketing</p>
@@ -215,9 +245,28 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="container">
+            <div class="footer-container">
+                <div class="footer-container-left">
                 <a class="logo logo-foot" href="./index.html">Web<span class="logo-fstud">Studio </span> </a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                </div>
+                <div class="footer-social">
+                <p class="footer-social-text">Social media</p>
+                <ul class="footer-social-link">
+                    <li>
+                        <div class="footer-icon">link1</div>
+                    </li>
+                    <li>
+                        <div class="footer-icon">link2</div>
+                    </li>
+                    <li>
+                        <div class="footer-icon">link3</div>
+                    </li>
+                    <li>
+                        <div class="footer-icon">link4</div>
+                    </li>
+                </ul>
+                </div>
             </div>
         </footer>
     </body>
