--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav class="header-nav">
                 <a class="logo logo-head" href="./index.html">Web<span class="logo-hstud">Studio </span> </a>
                 <ul class="header-nav-list ">
-                    <li><a class="header-link link" href="./index.html" target="_blank" rel="noopener noreferrer">Studio</a></li>
-                    <li><a class="header-link link" href="" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
-                    <li><a class="header-link link" href="" target="_blank" rel="noopener noreferrer">Contacts</a></li>
+                    <li><a class="header-link link header-nav-link" href="./index.html">Studio</a></li>
+                    <li><a class="header-link link" href="#portfolio">Portfolio</a></li>
+                    <li><a class="header-link link" href="#contacts" >Contacts</a></li>
                 </ul>
             </nav>
             
@@ -42,29 +42,37 @@
                     <h2 class="visually-hidden">Features</h2>
             <ul class="features-list">
                 <li class="features-items">
-                    <div class="features-icon">
-
+                    <div class="features-wrap">
+                    <svg class="features-icon">
+                        <use href="./images/icons.svg#antenna" width="64" heigth="64"></use>
+                    </svg>
                     </div>
                     <h3 class="features-title">Strategy</h3>
                     <p class="features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="features-items">
-                    <div class="features-icon">
-
+                    <div class="features-wrap">
+                        <svg class="features-icon">
+                            <use href="./images/icons.svg#clock" width="64" heigth="64"></use>
+                        </svg>
                     </div>
                     <h3 class="features-title">Punctuality</h3>
                     <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="features-items">
-                    <div class="features-icon">
-
+                    <div class="features-wrap">
+                        <svg class="features-icon">
+                            <use href="./images/icons.svg#diagram" width="64" heigth="64"></use>
+                        </svg>
                     </div>
                     <h3 class="features-title">Diligence</h3>
                     <p class="features-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="features-items">
-                    <div class="features-icon">
-
+                    <div class="features-wrap">
+                        <svg class="features-icon">
+                            <use href="./images/icons.svg#astronaut" width="64" heigth="64"></use>
+                        </svg>
                     </div>
                     <h3 class="features-title">Technologies</h3>
                     <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -83,16 +91,32 @@
                                 <p class="team-list-text">Product Designer</p>
                                 <ul class="team-social list">
                                     <li class="team-social-item">
-                                        <div>link1</div>
+                                        <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                     </li>
                                     <li class="team-social-item">
-                                        <div>link2</div>
+                                        <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                     </li>
                                     <li class="team-social-item">
-                                        <div>link3</div>
+                                        <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                     </li>
                                     <li class="team-social-item">
-                                        <div>link4</div>
+                                        <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
@@ -104,16 +128,32 @@
                             <p class="team-list-text">Frontend Developer</p>
                             <ul class="team-social list">
                                 <li class="team-social-item">
-                                    <div>link1</div>
+                                    <a class="team-soc-link" href="" target="_blank">
+                                        <svg class="team-soc-icon">
+                                            <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link2</div>
+                                    <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link3</div>
+                                    <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link4</div>
+                                    <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                             </ul>
                         </div>
@@ -125,16 +165,32 @@
                             <p class="team-list-text">Marketing</p>
                             <ul class="team-social list">
                                 <li class="team-social-item">
-                                    <div>link1</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link2</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link3</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link4</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                             </ul>
                         </div>
@@ -146,16 +202,32 @@
                             <p class="team-list-text">UI Designer</p>
                             <ul class="team-social list">
                                 <li class="team-social-item">
-                                    <div>link1</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link2</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link3</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <div>link4</div>
+                                    <a class="team-soc-link" href="" targen="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                            </svg>
+                                        </a>
                                 </li>
                             </ul>
                         </div>
@@ -163,7 +235,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="portfolio">
+            <section class="portfolio" id="portfolio">
                 <div class="container">
                     <h2 class="portfolio-title">Our Portfolio</h2>
                     <ul class="portfolio-list">
@@ -250,20 +322,36 @@
                 <a class="logo logo-foot" href="./index.html">Web<span class="logo-fstud">Studio </span> </a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
                 </div>
-                <div class="footer-social">
+                <div class="footer-social" id="contacts">
                 <p class="footer-social-text">Social media</p>
                 <ul class="footer-social-link">
                     <li>
-                        <div class="footer-icon">link1</div>
+                        <a class="footer-wrap" href="" target="_blank">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#instagram" width="24" heigth="24"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li>
-                        <div class="footer-icon">link2</div>
+                        <a class="footer-wrap" href="" target="_blank">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#twitter" width="24" heigth="24"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li>
-                        <div class="footer-icon">link3</div>
+                        <a class="footer-wrap" href="" target="_blank">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#facebook" width="24" heigth="24"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li>
-                        <div class="footer-icon">link4</div>
+                        <a class="footer-wrap" href="" target="_blank">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#linkedin" width="24" heigth="24"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
                 </div>
