--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li class="features-items">
                     <div class="features-wrap">
                     <svg class="features-icon">
-                        <use href="./images/icons.svg#antenna" width="64" heigth="64"></use>
+                        <use href="./images/icons.svg#antenna" width="64" ></use>
                     </svg>
                     </div>
                     <h3 class="features-title">Strategy</h3>
@@ -53,7 +53,7 @@
                 <li class="features-items">
                     <div class="features-wrap">
                         <svg class="features-icon">
-                            <use href="./images/icons.svg#clock" width="64" heigth="64"></use>
+                            <use href="./images/icons.svg#clock" width="64" ></use>
                         </svg>
                     </div>
                     <h3 class="features-title">Punctuality</h3>
@@ -62,7 +62,7 @@
                 <li class="features-items">
                     <div class="features-wrap">
                         <svg class="features-icon">
-                            <use href="./images/icons.svg#diagram" width="64" heigth="64"></use>
+                            <use href="./images/icons.svg#diagram" width="64" ></use>
                         </svg>
                     </div>
                     <h3 class="features-title">Diligence</h3>
@@ -71,7 +71,7 @@
                 <li class="features-items">
                     <div class="features-wrap">
                         <svg class="features-icon">
-                            <use href="./images/icons.svg#astronaut" width="64" heigth="64"></use>
+                            <use href="./images/icons.svg#astronaut" width="64" ></use>
                         </svg>
                     </div>
                     <h3 class="features-title">Technologies</h3>
@@ -93,28 +93,28 @@
                                     <li class="team-social-item">
                                         <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#instagram" width="16"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-social-item">
                                         <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#twitter" width="16"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-social-item">
                                         <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#facebook" width="16"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-social-item">
                                         <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#linkedin" width="16"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -130,28 +130,28 @@
                                 <li class="team-social-item">
                                     <a class="team-soc-link" href="" target="_blank">
                                         <svg class="team-soc-icon">
-                                            <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                            <use href="./images/icons.svg#instagram" width="16"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#twitter" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#facebook" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#linkedin" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
@@ -165,30 +165,29 @@
                             <p class="team-list-text">Marketing</p>
                             <ul class="team-social list">
                                 <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
+                                    <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#instagram" width="16"></use>                                      </svg>
+                                        </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-soc-link" href="" target="_blank">
+                                            <svg class="team-soc-icon">
+                                                <use href="./images/icons.svg#twitter" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
+                                    <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#facebook" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
+                                    <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
-                                            </svg>
-                                        </a>
-                                </li>
-                                <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
-                                            <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#linkedin" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
@@ -202,30 +201,30 @@
                             <p class="team-list-text">UI Designer</p>
                             <ul class="team-social list">
                                 <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
+                                    <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#instagram" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#instagram" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
+                                    <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#twitter" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#twitter" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
+                                    <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#facebook" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#facebook" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a class="team-soc-link" href="" targen="_blank">
+                                    <a class="team-soc-link" href="" target="_blank">
                                             <svg class="team-soc-icon">
-                                                <use href="./images/icons.svg#linkedin" width="16" heigth="16"></use>
+                                                <use href="./images/icons.svg#linkedin" width="16"></use>
                                             </svg>
                                         </a>
                                 </li>
@@ -328,28 +327,28 @@
                     <li>
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
-                                <use href="./images/icons.svg#instagram" width="24" heigth="24"></use>
+                                <use href="./images/icons.svg#instagram" width="24"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
-                                <use href="./images/icons.svg#twitter" width="24" heigth="24"></use>
+                                <use href="./images/icons.svg#twitter" width="24"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
-                                <use href="./images/icons.svg#facebook" width="24" heigth="24"></use>
+                                <use href="./images/icons.svg#facebook" width="24"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
-                                <use href="./images/icons.svg#linkedin" width="24" heigth="24"></use>
+                                <use href="./images/icons.svg#linkedin" width="24"></use>
                             </svg>
                         </a>
                     </li>
