--- a/index.html
+++ b/index.html
@@ -324,28 +324,28 @@
                 <div class="footer-social" id="contacts">
                 <p class="footer-social-text">Social media</p>
                 <ul class="footer-social-link">
-                    <li>
+                    <li class="foot-soc-item">
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
                                 <use href="./images/icons.svg#instagram" width="24"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="foot-soc-item">
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
                                 <use href="./images/icons.svg#twitter" width="24"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="foot-soc-item">
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
                                 <use href="./images/icons.svg#facebook" width="24"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="foot-soc-item">
                         <a class="footer-wrap" href="" target="_blank">
                             <svg class="footer-icon">
                                 <use href="./images/icons.svg#linkedin" width="24"></use>
