--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="footer-container">
+            <div class="footer-container container">
                 <div class="footer-container-left">
                 <a class="logo logo-foot" href="./index.html">Web<span class="logo-fstud">Studio </span> </a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
